Added pages and ability to edit, add new, and delete objects

--- a/angular_frontend/src/app/app.component.html
+++ b/angular_frontend/src/app/app.component.html
@@ -2,4 +2,5 @@
   <h1>Welcome to {{title}}!</h1>
 </div>
 
-<app-judge-list></app-judge-list>
+<!--<app-judge-list></app-judge-list>-->
+<router-outlet></router-outlet>
