Added bootstrap to the Angular frontend and styled the page a bit

--- a/angular_frontend/src/app/app.component.html
+++ b/angular_frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div style="text-align:center">
-  <h1>Welcome to {{title}}!</h1>
+  <h1>Judge List</h1>
 </div>
 
-<!--<app-judge-list></app-judge-list>-->
 <router-outlet></router-outlet>
