Styled the Angular frontend with bootstrap and cleaned up some code

--- a/angular_frontend/src/app/app.component.html
+++ b/angular_frontend/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div style="text-align:center">
-  <h1>Judge List</h1>
-</div>
 
-<router-outlet></router-outlet>
+<router-outlet>
+
+</router-outlet>
