--- a/angular_frontend/src/app/judge-edit/judge-edit.component.html
+++ b/angular_frontend/src/app/judge-edit/judge-edit.component.html
@@ -1,19 +1,89 @@
 <form #judgeForm="ngForm" (ngSubmit)="save(judgeForm.value)">
-  <h2>{{judge.id ? 'Edit' : 'Add'}} Judge</h2>
+  <div class="row justify-content-sm-center">
+    <h2>{{judge.id ? 'Edit' : 'Add'}} Judge</h2>
+  </div>
 
-  <b *ngIf="judge.id">ID: </b>
-  <input class="form-control" *ngIf="judge.id" placeholder="ID" [(ngModel)]="judge.id" required readonly name="id" #id><br *ngIf="judge.id" />
+  <div hidden>
+    <b *ngIf="judge.id">ID</b>
+    <input
+      class="form-control-plaintext"
+      *ngIf="judge.id"
+      placeholder="ID"
+      [(ngModel)]="judge.id"
+      required
+      readonly
+      name="id"
+      #id
+    />
+    <br *ngIf="judge.id" />
+  </div>
 
-  <b>First Name: </b>
-  <input class="form-control" placeholder="First Name" [(ngModel)]="judge.firstName" required name="firstName" #firstName><br/>
+  <div class="container">
+    <div class="form-group row">
+      <label for="firstName" class="col-sm-2 col-form-label">
+        <b>First Name</b>
+      </label>
+      <div class="col-sm-10">
+        <input
+          id="firstName"
+          class="form-control"
+          placeholder="First Name"
+          [(ngModel)]="judge.firstName"
+          required
+          name="firstName"
+          #firstName
+        />
+      </div>
+    </div>
+  </div>
 
-  <b>Last Name: </b>
-  <input class="form-control" placeholder="Last Name" [(ngModel)]="judge.lastName" required name="lastName" #lastName><br/>
+  <div class="container">
+    <div class="form-group row">
+      <label for="lastName" class="col-sm-2 col-form-label">
+        <b>Last Name</b>
+      </label>
+      <div class="col-sm-10">
+        <input
+          id="lastName"
+          class="form-control"
+          placeholder="Last Name"
+          [(ngModel)]="judge.lastName"
+          required
+          name="lastName"
+          #lastName
+        />
+      </div>
+    </div>
+  </div>
 
-  <b>Judge Number: </b>
-  <input class="form-control" placeholder="Judge Number" [(ngModel)]="judge.number" required name="number" #number><br/>
+  <div class="container">
+    <div class="form-group row">
+      <label for="number" class="col-sm-2 col-form-label">
+        <b>Judge Number</b>
+      </label>
+      <div class="col-sm-10">
+        <input
+          id="number"
+          class="form-control"
+          placeholder="Judge Number"
+          [(ngModel)]="judge.number"
+          required
+          name="number"
+          #number
+        />
+      </div>
+    </div>
+  </div>
 
-  <button class="btn btn-success" type="submit">Save</button>
-  <button class="btn btn-danger" (click)="remove(judge.id)" *ngIf="judge.id" type="button">Delete</button>
-  <button class="btn btn-warning" [routerLink]="['/judge-list']">Cancel</button>
+  <div class="row justify-content-sm-center">
+    <button class="btn btn-success" type="submit">
+      Save
+    </button>
+    <button class="btn btn-danger" (click)="remove(judge.id)" *ngIf="judge.id" type="button">
+      Delete
+    </button>
+    <button class="btn btn-warning" [routerLink]="['/judge-list']">
+      Cancel
+    </button>
+  </div>
 </form>
