--- a/angular_frontend/src/app/judge-list/judge-list.component.html
+++ b/angular_frontend/src/app/judge-list/judge-list.component.html
@@ -13,9 +13,10 @@
 <br/>
 
 <div class="row justify-content-sm-center">
-  <div class="col-sm-2">
-    <button class="btn btn-success" [routerLink]="['/judge-add']">
-      Add
-    </button>
-  </div>
+  <button class="btn btn-success" [routerLink]="['/judge-add']">
+    Add Judge
+  </button>
+  <button class="btn btn-primary" [routerLink]="['/judge-search']">
+    Search
+  </button>
 </div>
