Fixed an issue in the Angular front-end where the search was causing an error

--- a/angular_frontend/src/app/judge-search/judge-search.component.html
+++ b/angular_frontend/src/app/judge-search/judge-search.component.html
@@ -13,7 +13,7 @@
           id="searchTerm"
           class="form-control"
           placeholder="Search"
-          [ngModel]="searchTerm.text"
+          [ngModel]="searchTerm"
           name="searchTerm"
           required
         />
